--- a/Spring-Framerwork/pom.xml
+++ b/Spring-Framerwork/pom.xml
@@ -93,6 +93,13 @@
       <artifactId>lombok</artifactId>
       <version>1.18.8</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>provided</scope>
+    </dependency>
+
 
   </dependencies>
 
